1.5/src/deployment_backend_hw15.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment-multitool
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: multitool-container
        image: wbitt/network-multitool:latest
        ports:
        - containerPort: 80
