1.5/src/deployment_frontend_hw15.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fronted-deployment-nginx
  labels:
    app: frontend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
