1.5/src/service_backend_hw15.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service-multitool
spec:
  selector:
    app: backend
  ports:
    - name: http
      port: 80
      targetPort: 80
