1.5/src/service_frontend_hw15.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service-nginx
spec:
  selector:
    app: frontend
  ports:
    - name: nginx-http
      port: 80
      targetPort: 80
