1.5/src/ingress-nginx_hw15.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: localhost
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend-service-multitool
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service-nginx
            port:
              number: 80
